force-app/main/default/objects/TASKRAY__trGlobalSettings__c/TASKRAY__trGlobalSettings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>TaskRay Global Settings</label>
</CustomObject>