force-app/main/default/objects/TASKRAY__trGlobalSettings__c/fields/TASKRAY__trAddContributorsAsync__c.field-meta.xml
<CustomField>
    <fullName>TASKRAY__trAddContributorsAsync__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Add Contributors Async</label>
    <type>Checkbox</type>
</CustomField>