force-app/main/default/objects/TASKRAY__trGlobalSettings__c/fields/TASKRAY__trChangeItemDebounceDelay__c.field-meta.xml
<CustomField>
    <fullName>TASKRAY__trChangeItemDebounceDelay__c</fullName>
    <defaultValue>500</defaultValue>
    <label>Batching board transaction delay in ms</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>