force-app/main/default/objects/TASKRAY__trGlobalSettings__c/fields/TASKRAY__trCommunityTLDOverride__c.field-meta.xml
<CustomField>
    <fullName>TASKRAY__trCommunityTLDOverride__c</fullName>
    <label>TaskRay Community TLD</label>
    <length>18</length>
    <type>Text</type>
</CustomField>