force-app/main/default/objects/TASKRAY__trGlobalSettings__c/fields/TASKRAY__trContactSupportOverride__c.field-meta.xml
<CustomField>
    <fullName>TASKRAY__trContactSupportOverride__c</fullName>
    <label>Override Contact Support link</label>
    <length>255</length>
    <type>Text</type>
</CustomField>