force-app/main/default/objects/TASKRAY__trGlobalSettings__c/fields/TASKRAY__trCustomCSSURL__c.field-meta.xml
<CustomField>
    <fullName>TASKRAY__trCustomCSSURL__c</fullName>
    <defaultValue>&quot;&quot;</defaultValue>
    <label>trCustomCSSURL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>