force-app/main/default/objects/TASKRAY__trGlobalSettings__c/fields/TASKRAY__trDetailModalExperimentalRedirect__c.field-meta.xml
<CustomField>
    <fullName>TASKRAY__trDetailModalExperimentalRedirect__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Detail Modal - Experimental Redirect</label>
    <type>Checkbox</type>
</CustomField>