force-app/main/default/objects/TASKRAY__trGlobalSettings__c/fields/TASKRAY__trDoNotUseConsoleTabNav__c.field-meta.xml
<CustomField>
    <fullName>TASKRAY__trDoNotUseConsoleTabNav__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>This setting applies when TaskRay is used in the Console Lightning App and controls how Projects and Tasks are viewed.</inlineHelpText>
    <label>Do not use console tabs for TaskRay Nav</label>
    <type>Checkbox</type>
</CustomField>