force-app/main/default/objects/TASKRAY__trGlobalSettings__c/fields/TASKRAY__trEnableDependencyUpdates__c.field-meta.xml
<CustomField>
    <fullName>TASKRAY__trEnableDependencyUpdates__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enable Legacy Dependencies (Deprecated)</label>
    <type>Checkbox</type>
</CustomField>