force-app/main/default/objects/TASKRAY__trGlobalSettings__c/fields/TASKRAY__trEnableMultipleTaskRecordTypes__c.field-meta.xml
<CustomField>
    <fullName>TASKRAY__trEnableMultipleTaskRecordTypes__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Allows for the use of multiple Task record types per Project.</description>
    <inlineHelpText>Allows for the use of multiple Task record types per Project.</inlineHelpText>
    <label>Enable Multiple Task Record Types</label>
    <type>Checkbox</type>
</CustomField>