force-app/main/default/objects/TASKRAY__trGlobalSettings__c/fields/TASKRAY__trEnableSlackIntegration__c.field-meta.xml
<CustomField>
    <fullName>TASKRAY__trEnableSlackIntegration__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enable Slack Integration</label>
    <type>Checkbox</type>
</CustomField>