force-app/main/default/objects/TASKRAY__trGlobalSettings__c/fields/TASKRAY__trEnhancedCloning__c.field-meta.xml
<CustomField>
    <fullName>TASKRAY__trEnhancedCloning__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enable Enhanced Cloning</label>
    <type>Checkbox</type>
</CustomField>