force-app/main/default/objects/TASKRAY__trGlobalSettings__c/fields/TASKRAY__trEnhancedModalLayouts__c.field-meta.xml
<CustomField>
    <fullName>TASKRAY__trEnhancedModalLayouts__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This setting enables enhanced detail modal layouts in TaskRay.  This allows for the use of native Salesforce object page layouts instead of field sets.</description>
    <inlineHelpText>This setting enables enhanced detail modal layouts in TaskRay.  This allows for the use of native Salesforce object page layouts instead of field sets.</inlineHelpText>
    <label>Enhanced Modal Layouts</label>
    <type>Checkbox</type>
</CustomField>