force-app/main/default/objects/TASKRAY__trGlobalSettings__c/fields/TASKRAY__trFormsPublicSiteURL__c.field-meta.xml
<CustomField>
    <fullName>TASKRAY__trFormsPublicSiteURL__c</fullName>
    <inlineHelpText>The URL of the Public Site used to host TaskRay Forms.</inlineHelpText>
    <label>TaskRay Forms Public Site URL</label>
    <type>Url</type>
</CustomField>