force-app/main/default/objects/TASKRAY__trGlobalSettings__c/fields/TASKRAY__trFormsPublicSiteUserId__c.field-meta.xml
<CustomField>
    <fullName>TASKRAY__trFormsPublicSiteUserId__c</fullName>
    <inlineHelpText>The User ID of the TaskRay Forms Public Site Guest User.</inlineHelpText>
    <label>TaskRay Forms Public Site User Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>