force-app/main/default/objects/TASKRAY__trGlobalSettings__c/fields/TASKRAY__trGridBuddyURLForProject__c.field-meta.xml
<CustomField>
    <fullName>TASKRAY__trGridBuddyURLForProject__c</fullName>
    <defaultValue>&quot;gblite__Grid?gname=Tasks+For+Projects&quot;</defaultValue>
    <label>trGridBuddyURLForProject</label>
    <length>255</length>
    <type>Text</type>
</CustomField>