force-app/main/default/objects/TASKRAY__trGlobalSettings__c/fields/TASKRAY__trHideContactSupport__c.field-meta.xml
<CustomField>
    <fullName>TASKRAY__trHideContactSupport__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hide Contact Support link</label>
    <type>Checkbox</type>
</CustomField>