force-app/main/default/objects/TASKRAY__trGlobalSettings__c/fields/TASKRAY__trHideQuipTab__c.field-meta.xml
<CustomField>
    <fullName>TASKRAY__trHideQuipTab__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Applies to orgs that have Quip installed.</inlineHelpText>
    <label>Hide Quip from Project and Task modals</label>
    <type>Checkbox</type>
</CustomField>