force-app/main/default/objects/TASKRAY__trGlobalSettings__c/fields/TASKRAY__trListColor_2__c.field-meta.xml
<CustomField>
    <fullName>TASKRAY__trListColor_2__c</fullName>
    <label>Deprecated (Do Not Use)</label>
    <length>7</length>
    <type>Text</type>
</CustomField>