force-app/main/default/objects/TASKRAY__trGlobalSettings__c/fields/TASKRAY__trNestedGroupHierarchy__c.field-meta.xml
<CustomField>
    <fullName>TASKRAY__trNestedGroupHierarchy__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Public group hierarchy query level</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>