force-app/main/default/objects/TASKRAY__trGlobalSettings__c/fields/TASKRAY__trOnlyShowOwnersInTeamTab__c.field-meta.xml
<CustomField>
    <fullName>TASKRAY__trOnlyShowOwnersInTeamTab__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Only show task owners in team sidebar</label>
    <type>Checkbox</type>
</CustomField>