force-app/main/default/objects/TASKRAY__trGlobalSettings__c/fields/TASKRAY__trOptOutOfTRSharing__c.field-meta.xml
<CustomField>
    <fullName>TASKRAY__trOptOutOfTRSharing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Opt out of standard TaskRay sharing</label>
    <type>Checkbox</type>
</CustomField>