force-app/main/default/objects/TASKRAY__trGlobalSettings__c/fields/TASKRAY__trPollingInterval__c.field-meta.xml
<CustomField>
    <fullName>TASKRAY__trPollingInterval__c</fullName>
    <defaultValue>10.000</defaultValue>
    <description>Sets the polling interval in seconds for Taskray&#39;s concurrency feature.</description>
    <inlineHelpText>This value is the interval that TaskRay checks for updates from other users. This value can range from 5 to 99 seconds, with a default value of 10. Higher values reduce Salesforce server impact but increase the time period between update notifications.</inlineHelpText>
    <label>Polling Interval</label>
    <precision>5</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>