force-app/main/default/objects/TASKRAY__trGlobalSettings__c/fields/TASKRAY__trPublicSiteUserId__c.field-meta.xml
<CustomField>
    <fullName>TASKRAY__trPublicSiteUserId__c</fullName>
    <label>TaskRay Public Site User Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>