force-app/main/default/objects/TASKRAY__trGlobalSettings__c/fields/TASKRAY__trRunTransactionsOnMainThread__c.field-meta.xml
<CustomField>
    <fullName>TASKRAY__trRunTransactionsOnMainThread__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Deprecated (Do Not Use)</label>
    <type>Checkbox</type>
</CustomField>