force-app/main/default/objects/TASKRAY__trGlobalSettings__c/fields/TASKRAY__trShowSyncMetadataCacheButton__c.field-meta.xml
<CustomField>
    <fullName>TASKRAY__trShowSyncMetadataCacheButton__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Show Sync Metadata Cache Button</label>
    <type>Checkbox</type>
</CustomField>