force-app/main/default/objects/TASKRAY__trGlobalSettings__c/fields/TASKRAY__trTaskLabelColor_1__c.field-meta.xml
<CustomField>
    <fullName>TASKRAY__trTaskLabelColor_1__c</fullName>
    <defaultValue>&quot;#c3325f&quot;</defaultValue>
    <label>Task Label Color 1</label>
    <length>7</length>
    <type>Text</type>
</CustomField>