force-app/main/default/objects/TASKRAY__trGlobalSettings__c/fields/TASKRAY__trTaskLabelColor_4__c.field-meta.xml
<CustomField>
    <fullName>TASKRAY__trTaskLabelColor_4__c</fullName>
    <defaultValue>&quot;#9d261d&quot;</defaultValue>
    <label>Task Label Color 4</label>
    <length>7</length>
    <type>Text</type>
</CustomField>