force-app/main/default/objects/TASKRAY__trGlobalSettings__c/fields/TASKRAY__trTaskLabelColor_6__c.field-meta.xml
<CustomField>
    <fullName>TASKRAY__trTaskLabelColor_6__c</fullName>
    <defaultValue>&quot;#5bb75b&quot;</defaultValue>
    <label>Task Label Color 6</label>
    <length>7</length>
    <type>Text</type>
</CustomField>