force-app/main/default/objects/TASKRAY__trGlobalSettings__c/fields/TASKRAY__trTaskModalCustomTab1Label__c.field-meta.xml
<CustomField>
    <fullName>TASKRAY__trTaskModalCustomTab1Label__c</fullName>
    <label>Task Modal Custom Tab 1 Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>