force-app/main/default/objects/TASKRAY__trGlobalSettings__c/fields/TASKRAY__trTaskModalCustomTab1URL__c.field-meta.xml
<CustomField>
    <fullName>TASKRAY__trTaskModalCustomTab1URL__c</fullName>
    <inlineHelpText>TaskRay will substitute the task id for $id in this url</inlineHelpText>
    <label>Task Modal Custom Tab 1 URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>