force-app/main/default/objects/TASKRAY__trGlobalSettings__c/fields/TASKRAY__trTimeBillableDefault__c.field-meta.xml
<CustomField>
    <fullName>TASKRAY__trTimeBillableDefault__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Applies to TaskRay Time entries and the default value of the Billable checkbox</inlineHelpText>
    <label>Mark time entries as billable by default</label>
    <type>Checkbox</type>
</CustomField>