force-app/main/default/objects/TASKRAY__trGlobalSettings__c/fields/TASKRAY__trUseDefaultSharingReason__c.field-meta.xml
<CustomField>
    <fullName>TASKRAY__trUseDefaultSharingReason__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Deprecated (Do Not Use)</inlineHelpText>
    <label>Deprecated (Do Not Use)</label>
    <type>Checkbox</type>
</CustomField>